# tg-clone-client

./: .gitignore  LICENSE  README.md
ChatClient/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  qml.qrc
ChatClient/qml/: ChatArea.qml  ChatItem.qml  ChatList.qml  Main.qml
ChatClient/src/: main.cpp
ChatClient/src/Domain/: ChatService.cpp  ChatService.h
ChatClient/src/Repository/: ChatRepository.cpp  ChatRepository.h
ChatClient/src/ViewModels/: ChatViewModel.cpp  ChatViewModel.h
